<resources>
    <string name="app_name">Heyoe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_exception_view">ExceptionView</string>
    <string name="title_activity_sign">Sign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_detail_post">DetailPostActivity</string>
    <string name="title_activity_media_play">MediaPlayActivity</string>
    <string name="title_activity_layer_chat">LayerChatActivity</string>
    <string name="title_activity_black__friend_">Black_Friend_Activity</string>
    <string name="title_activity_photo_crop">PhotoCropActivity</string>
    <string name="title_activity_take_media">TakeMediaActivity</string>
    <string name="facebook_app_id">1115896661787487</string>
    <string name="key_hash">GdhKsBv2+UhE/d1pVFKBJc4YuWM=</string>
    <string name="project_id">535417836265</string>
    <string name="google_android_key">AIzaSyAnKdnRaagQEAC3lBq5DdsKIFkgE-R1Fus</string>
    <string name="server_key">AIzaSyDSAX_JhBN9By9EdR-rqWVgn1WTsSRF8sA</string>
    <string name="client_id">535417836265-rcv1sqkn540iec13ibun3980emfg1jdb.apps.googleusercontent.com</string>
    <string name="google_place_api_key">AIzaSyCaS0dDhpug9qcv4fgus37u8hZU8eZ-mEc</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="register">register</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">confirm password</string>
    <string name="Signup">Sign Up</string>
    <string name="Sign_up">Sign Up</string>
    <string name="By_clicking">By clicking </string>
    <string name="you_are_agree">you are agreeing to our</string>
    <string name="Terms_of_use">terms and conditions</string>
    <string name="and">and</string>
    <string name="Privacy_policy">privacy policy</string>
    <string name="checkout_all_comment">Checkout all comments</string>
    <string name="FAVORITES">FAVORITES</string>
    <string name="FRIENDS">FRIENDS</string>
    <string name="REQUESTS">REQUESTS</string>
    <string name="MORE_FRIENDS">FIND FRIENDS</string>
    <string name="INVITE_FRIENDS">INVITE FRIENDS</string>
    <string name="GROUPS">GROUPS</string>
    <string name="CALENDAR">CALENDAR</string>
    <string name="FAQ">FAQ</string>
    <string name="LOG_OUT">LOG OUT</string>
    <string name="like_a_photo_from"> liked a photo from </string>
    <string name="like_a_video_from"> liked a video from </string>
    <string name="seconds_ago"> seconds ago</string>
    <string name="minutes_ago"> minutes ago</string>
    <string name="hours_ago"> hours ago</string>
    <string name="days_ago"> days ago</string>
    <string name="weeks_ago"> weeks ago</string>
    <string name="monthes_ago"> monthes ago</string>
    <string name="years_ago"> years ago</string>
    <string name="second_ago"> second ago</string>
    <string name="minute_ago"> minute ago</string>
    <string name="hour_ago"> hour ago</string>
    <string name="day_ago"> day ago</string>
    <string name="week_ago"> week ago</string>
    <string name="monthe_ago"> monthe ago</string>
    <string name="year_ago"> year ago</string>
    <string name="people">people</string>
    <string name="typing">typing...</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="profile">profile</string>
    <string name="media">media</string>
    <string name="Friends">friends</string>
    <string name="crop">crop</string>
    <string name="Login_with">Login with</string>
    <string name="waiting">waiting...</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="INFO">INFO</string>
    <string name="MEDIA">MEDIA</string>
    <string name="FRIEND">FRIENDS</string>
    <string name="photos">photos</string>
    <string name="videos">videos</string>
    <string name="contact">info</string>
    <string name="about_me">about me</string>
    <string name="Name">Name</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Language">Language</string>
    <string name="Email">Email</string>
    <string name="Birthday">Birthday</string>
    <string name="Gender">Gender</string>
    <string name="Private_status">Status</string>
    <string name="Celebrity">Celebrity</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="post">post</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="blocked">blocked</string>
    <string name="friends">Friends</string>
    <string name="favorite">favorites</string>
    <string name="more_friends">find friends</string>
    <string name="requests">requests</string>
    <string name="invited_friends">invite friends</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="Please_input_name">Please input your name</string>
    <string name="Invalid_email">Invalid email</string>
    <string name="Input_password">Please input password</string>
    <string name="Input_longer_password">Password length must be longer than 3</string>
    <string name="Confirm_password">Please confrim password</string>
    <string name="input_email">Please input email</string>
    <string name="choose_photo">Choose picture from</string>
    <string name="choose_video">Choose video from</string>
    <string name="take_more_media">Please take media</string>
    <string name="type_comment_below">Type your comment below</string>
    <string name="input_fullname">Please input fullname</string>
    <string name="input_new_password">Please input new password</string>
    <string name="input_confirm_password_again">Please input confirm password again</string>
    <string name="wait_one_minute">Please wait a minute to use this again</string>
    <string name="confirm_header_photo">Use this photo as profile picture?</string>
    <string name="confirm_header_video">Use this video as profile movie?</string>
    <string name="confirm_delete_post">Do you want to delete this post?</string>
    <string name="confirm_update_avatar">Change profile picture?</string>
    <string name="input_description">Please input description</string>
    <string name="do_you_want_accept">Do you want to accept </string>
    <string name="s_request">s request?</string>
    <string name="email_registerd">Email already registered</string>
    <string name="email_unregistered">Email is unregistered</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="post_failed">Posting failed</string>
    <string name="post_success">Posted successfully</string>
    <string name="access_denied">Access denied</string>
    <string name="invite_sucess">Invited successfully</string>
    <string name="cancel_invite">Are you sure you want to cancel this request?</string>
    <string name="reject_friend">Are you sure you want to reject this request?</string>
    <string name="cancel_success">Your invitation has been canceled</string>
    <string name="reject_success">You rejected the request</string>
    <string name="accept_success"> is now your friend</string>
    <string name="Youtube_play_error">Cannoot play this video</string>
    <string name="success">success</string>
    <string name="user_not_exist">user not exists</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_loading">Loading…</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="splash_app_version">v %s</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Dutch</item>
        <item>Turkish</item>
        
        
    </string-array>
    <string name="English">English</string>
    <string name="Netherland">Dutch</string>
    <string name="Turkish">Turkish</string>
    <string name="Germany">Germany</string>
    <string name="Input_Description">input description</string>
    <string name="input_hashtag">input hashtag</string>
    <string name="paste_youtube_link">paste Youtube video url here</string>
    <string name="Tag">Tag</string>
    <string name="Send">Send</string>
    <string name="Log_out">Log out</string>
    <string name="Do_you_want_logout">Do you want to log out?</string>
    <string name="Accept">Accept</string>
    <string name="accepted_your_request">accepted your request</string>
    <string name="No">No</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Youtube">Youtube</string>
    <string name="Set">Set</string>
    <string name="Discard">Cancel</string>
    <string name="Play">Play</string>
    <string name="How_it_works">HOW IT WORKS</string>
    <string name="liked_your_post">liked your post</string>
    <string name="disliked_your_post">disliked your post</string>
    <string name="commented_on_your_post">commented on your post</string>
    <string name="shared_your_post">shared your post</string>
    <string name="sent_friend_request_to_you">sent you a friend request</string>
    <string name="is_now_your_friend">is now your friend</string>
    <string name="rejected_your_friend_request">rejected your friend request</string>
    <string name="tagged_you_in_post">tagged you in a post</string>
    <string name="You_receive_checkin_chat_request">You received checkin chat request from </string>
    <string name="accepted_your_checkin_chat_request">accepted your checkin chat request</string>
    <string name="You_received_new_message">Heyoe - You received new message</string>
    <string name="sent_friend_invitation">sent a friend invitation</string>
    <string name="accept_friend_invitiation">accepted your friend request</string>
    <string name="reject_friend_invitation">reject your friend invitation</string>
    <string name="You_are_tagged_by">You are tagged by </string>
    <string name="file_size_big">File size is too big</string>
    <string name="user_left_this_location">Sorry, this user left this location</string>
    <string name="Yes">Yes</string>
    <string name="are_you_sure_delete">will be deleted from your friend list.</string>
    <string name="Deleted_friend_successfully">Deleted friend successfully</string>
    <string name="Chat_history_deleted_successfully">Chat history deleted succesfully</string>
    <string name="pls_input_email">Please input email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="pls_input_password">Please input password</string>
    <string name="email_sent">New password sent to your email</string>
    <string name="dont_remember_password">Still not remember password?</string>
    <string name="user_agreement">user agreement</string>
    <string name="sent_request_successfully">Sent request successfully</string>
</resources>