<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.heyoe.controller.fragments.SignupFragment"
    android:background="@drawable/green_bg">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:weightSum="5"
      android:gravity="center_horizontal">
      <!--profile photo-->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="3.5">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/green_menu_banner"/>
              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/green_menu_banner_noeffect"/>
              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dimen_28dp">
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:src="@drawable/default_circular_user_photo"
                      android:layout_centerInParent="true"

                      />
                  <ImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:src="@drawable/white_circle_border"
                      android:layout_centerInParent="true"

                      />
                  <com.heyoe.widget.MyCircularImageView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_centerInParent="true"
                      android:layout_margin="@dimen/dimen_8dp"
                      />
              </RelativeLayout>

          </RelativeLayout>
      </LinearLayout>
      <!--input data-->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1.5"
          android:weightSum="8"
          android:gravity="center_horizontal"
          android:orientation="vertical">
          <!--edit fields-->
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="3"
              android:orientation="vertical"
              android:weightSum="5"
              android:gravity="center_horizontal"
              android:layout_marginLeft="@dimen/dimen_28dp"
              android:layout_marginRight="@dimen/dimen_28dp"
              >
              <!--Firstname-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/round_corner_bg_white"
                  android:paddingLeft="@dimen/dimen_12dp"
                  android:paddingRight="@dimen/dimen_12dp"
                  android:layout_marginTop="@dimen/dimen_4dp"
                  android:gravity="center_vertical">
                  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/firstname"
                      android:background="@null"
                      android:inputType="text"/>
              </LinearLayout>
              <!--Lastname-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/round_corner_bg_white"
                  android:paddingLeft="@dimen/dimen_12dp"
                  android:paddingRight="@dimen/dimen_12dp"
                  android:layout_marginTop="@dimen/dimen_4dp"
                  android:gravity="center_vertical">
                  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/lastname"
                      android:background="@null"
                      android:inputType="text"/>
              </LinearLayout>
              <!--email-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/round_corner_bg_white"
                  android:paddingLeft="@dimen/dimen_12dp"
                  android:paddingRight="@dimen/dimen_12dp"
                  android:layout_marginTop="@dimen/dimen_4dp"
                  android:gravity="center_vertical">
                  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/email"
                      android:background="@null"
                      android:inputType="textEmailAddress"/>
              </LinearLayout>
              <!--password-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/round_corner_bg_white"
                  android:paddingLeft="@dimen/dimen_12dp"
                  android:paddingRight="@dimen/dimen_12dp"
                  android:layout_marginTop="@dimen/dimen_4dp"
                  android:gravity="center_vertical">
                  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      android:background="@null"
                      android:inputType="textPassword"/>
              </LinearLayout>
              <!--confirm password-->
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@drawable/round_corner_bg_white"
                  android:paddingLeft="@dimen/dimen_12dp"
                  android:paddingRight="@dimen/dimen_12dp"
                  android:layout_marginTop="@dimen/dimen_4dp"
                  android:gravity="center_vertical">
                  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/confirm_password"
                      android:background="@null"
                      android:inputType="textPassword"/>
              </LinearLayout>

          </LinearLayout>
          <!--sign up button-->
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="5"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:weightSum="2">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="horizontal"
                  android:gravity="center">
                  <Button
                      android:layout_width="100dp"
                      android:layout_height="@dimen/button_height"
                      android:background="@drawable/round_corner_bg_white"
                      android:text="@string/Signup"
                      android:layout_marginTop="@dimen/dimen_12dp"
                      />
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:weightSum="2">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:layout_weight="1"
                      >
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/By_clicking"
                          android:textColor="@color/white"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/Signup"
                          android:textColor="@color/white"
                          android:layout_marginRight="@dimen/dimen_4dp"
                          android:layout_marginLeft="@dimen/dimen_4dp"
                          android:textStyle="bold"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/you_are_agree"
                          android:textColor="@color/white"/>


                  </LinearLayout>
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"
                      android:layout_weight="1">
                      <RelativeLayout
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/Terms_of_use"
                              android:textColor="@color/white"
                              android:layout_marginRight="@dimen/dimen_4dp"
                              android:layout_marginLeft="@dimen/dimen_4dp"
                              android:textStyle="bold"/>

                      </RelativeLayout>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/and"
                          android:textColor="@color/white"/>
                      <RelativeLayout
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/Privacy_policy"
                              android:textColor="@color/white"
                              android:layout_marginRight="@dimen/dimen_4dp"
                              android:layout_marginLeft="@dimen/dimen_4dp"
                              android:textStyle="bold"
                              />

                      </RelativeLayout>
                  </LinearLayout>
              </LinearLayout>

          </LinearLayout>
      </LinearLayout>
  </LinearLayout>

</FrameLayout>
