<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.heyoe.controller.fragments.SigninFragment"
    android:background="@drawable/green_bg">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_small1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Login with"
                android:textColor="@color/white"
                android:layout_weight="1.1"/>
            <!--social login-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:layout_weight="1.05"
                >
                <RelativeLayout
                    android:id="@+id/rl_signin_fb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_white"
                    android:layout_marginRight="@dimen/dimen_4dp">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_facebook"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl_signin_google"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_white"
                    android:layout_marginLeft="@dimen/dimen_4dp">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_google"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"/>
                </RelativeLayout>

            </LinearLayout>
            <!--default login-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="@drawable/round_corner_bg_white"
                android:paddingLeft="@dimen/dimen_12dp"
                android:paddingRight="@dimen/dimen_12dp"
                android:layout_weight="0.8"
                android:gravity="center">
                <EditText
                    android:id="@+id/et_signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/dark"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginBottom="@dimen/dimen_4dp"/>
                <EditText
                    android:id="@+id/et_signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"/>
            </LinearLayout>
            <!--login button-->
            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_weight="1.05"
                android:text="@string/login"
                android:textColor="@color/green"
                android:background="@drawable/round_corner_bg_white"
                >
            </Button>
            <!--forgot password / register-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="@dimen/dimen_28dp"
                android:layout_marginLeft="@dimen/dimen_28dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:gravity="center"
                android:layout_weight="1"

                >
                <TextView
                    android:id="@+id/tv_signin_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/forgot_password"/>
                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:background="@color/white"/>
                <TextView
                    android:id="@+id/tv_signin_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/register"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
